--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Saiful Islam Sajon",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
